# Engram

./: .dockerignore  .env.example  .env.local.example-docker  .env.local.example-no-docker  .gitignore  .pre-commit-config.yaml  DEPLOY.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  render.yaml  start_local.ps1
alembic/: env.py
alembic/versions/: 0001_initial.py
dashboard/: app.py
lab/: daemons  docker-compose.yml  r1.conf  r2.conf
scripts/: LIVE_DEMO_STEPS.md  capture_devnet.py  capture_lab.py  demo.py  seed_demo_api.py  seed_runbook.md  test_llm.py
scripts/faults/: _common.sh  acl_block.sh  bgp_aspath_variant.sh  bgp_neighbor_down.sh  heal.sh  mtu_mismatch.sh  ospf_cost_blackhole.sh
src/engram/: cli.py  config.py  main.py
src/engram/api/: deps.py  routes_capture.py  routes_health.py  routes_incidents.py  routes_lab.py  routes_networks.py  routes_query.py
src/engram/capture/: builder.py  cli_capture.py  devnet.py  lab.py  netmiko_session.py  parsers.py
src/engram/domain/: enums.py  models.py  signature.py  summary.py
src/engram/embedding/: embedder.py
src/engram/ingest/: pipeline.py
src/engram/reasoning/: prompts.py  reasoner.py
src/engram/retrieval/: hybrid.py  scoring.py  staleness.py
src/engram/storage/: bootstrap.py  db.py  incident_repo.py  orm.py  tenant_repo.py  vector_store.py
tests/: _embed.py  conftest.py  test_api.py  test_ingest.py  test_retrieval.py  test_scoring.py  test_signature.py
tests/fixtures/: acl_block_show_access_list.txt  bgp_neighbor_detail.txt  bgp_neighbor_down_show_ip_bgp_summary.txt  mtu_mismatch_show_interface.txt  ospf_neighbor.txt  session_transcript_bgp.txt
topology/: engram-demo.clab.yml
topology/configs/: R1.conf  R2.conf  R3.conf  R4.conf  daemons
web/: index.html
