[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "engram"
version = "0.1.0"
description = "Engram — a network-specific incident memory layer with hybrid retrieval and comparative LLM reasoning."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Engram" }]
keywords = ["networking", "aiops", "incident-memory", "rag", "vector-search"]

dependencies = [
    # API
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # models / validation / config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    # CLI
    "typer>=0.12",
    "rich>=13.7",
    # structured store
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    # vector store
    "qdrant-client>=1.9",
    # embeddings (local, open-source)
    "sentence-transformers>=3.0",
    # reasoning LLM (provider-swappable)
    "litellm>=1.40",
    # device interaction (capture)
    "netmiko>=4.3",
    "ntc-templates>=4.0",
    # http client used by CLI / dashboard
    "httpx>=0.27",
]

[project.optional-dependencies]
dashboard = ["streamlit>=1.35", "pandas>=2.2"]
genie = ["pyats[full]>=24.0"]  # optional: Cisco Genie parsers (heavy; install separately)
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "types-requests",
]

[project.scripts]
engram = "engram.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/engram"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",   # line length handled by formatter
    "B008",   # function call in default arg — this is the idiomatic FastAPI Depends() pattern
    "UP017",  # datetime.UTC alias is 3.11+; we keep timezone.utc for broader runtime compat
    "UP042",  # StrEnum is 3.11+; we use (str, Enum) for broader runtime compat
]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
disallow_untyped_defs = false
warn_unused_ignores = false
namespace_packages = true
explicit_package_bases = true
mypy_path = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
